fix: create extra space for slogan on smaller resolutions

--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -211,3 +211,11 @@ hobo-wave {
         font-size: 0.6rem;
     }
 }
+
+@media  (max-width: 480px) {
+    #hobo-founders {
+        .hobo-founder {
+            margin-top: 0;
+        }
+    }
+}
